Issue#425:Part 1: UI changes for campaign filter view (#426)
Co-authored-by: Anupam Jain <anupam2204.smart@gmail.com>
Reviewed-on: https://gitea.local.coddicted.com/coddicted/buzzma/pulls/426
Reviewed-by: Payam Rastogi <payamrastogi@gmail.com>